--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-/Nova pasta
-/pfr_nfl_draft_data_RAW.csv
+/Nova pasta/
+pfr_nfl_draft_data_RAW.csv
 .vscode/settings.json
+project*.sublime-project
+project.sublime-workspace
