--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-Nova pasta/
 pfr_nfl_draft_data_RAW.csv
 .vscode/settings.json
-project*.sublime-project
-project.sublime-workspace
+*.sublime-project
+*.sublime-workspace
