--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ pfr_nfl_draft_supp_data_RAW.csv
 .vscode/settings.json
 __pycache__/
 Drafts_data.zip
+.idea/Drafts_python_script.iml
+*.xml
+*.csv
+*.sql
